Come dici? Si, esatto, ancora altro front-end D:

--- a/ocarina2/TODO
+++ b/ocarina2/TODO
@@ -1,2 +1,5 @@
 Bug commenti;
 Errori definiti nel template (magari usa i codici di errore);
+Spoiler;
+Cache (quando la pagina viene modificata si ricrea, tipo quando un utente posta un commento o si invia una news);
+Log nel database quando si effettua un'azione (commento, login, logout, news...).
