--- a/ocarina2/TODO
+++ b/ocarina2/TODO
@@ -1,4 +1,3 @@
 Front-end del back-end [cit.];
 Errori definiti nel template (magari usa i codici di errore);
-Spoiler;
-Cache (quando la pagina viene modificata si ricrea, tipo quando un utente posta un commento o si invia una news).
+Vedi cellulare :D
