Text preview at 50%. Administration links fixed.

--- a/ocarina2/TODO
+++ b/ocarina2/TODO
@@ -1,2 +1,4 @@
-Front-end del back-end [cit.];
-Vedi cellulare :D
+Modifica skin, Installa news, Cancella news
+Le anteprime funzionano solo nella modifica delle news/pagine.
+Gli accessi totali vengono aggiornati sempre il giorno dopo.
+
