TODO and REPORT exported from my mobile, page/news votes and visits fixed and SQL table updated.

--- a/ocarina2/TODO
+++ b/ocarina2/TODO
@@ -1,4 +1,5 @@
-Modifica skin, Installa news, Cancella news
-Le anteprime funzionano solo nella modifica delle news/pagine.
-Gli accessi totali vengono aggiornati sempre il giorno dopo.
-
+Modifica skin, Installa skin, Cancella skin
+Newsletter
+Testing
+???
+PROFIT!
