--- a/ocarina2/TODO
+++ b/ocarina2/TODO
@@ -1,5 +1,4 @@
-Feed-stats e global translator;
 Skin per il mobile e libreria per il detect;
 MP?;
-Bugfix;
+Bugfix del /REPORT;
 Caching delle query.
