Mobile check added.

--- a/ocarina2/TODO
+++ b/ocarina2/TODO
@@ -1,3 +1,4 @@
-Skin per il mobile;
+Protezione alle CSFR tramite token;
 Bugfix del /REPORT;
-Caching delle query.
+Caching delle query;
+Skin `mobile`.
