All the plugin system has been improved.

--- a/ocarina2/README
+++ b/ocarina2/README
@@ -42,7 +42,7 @@ modificare il grado di questi ultimi e creare il proprio robots.txt che comunica
 quali pagine indicizzare e quali no.
 Ocarina2, inoltre, permette l'installazione di plugin di terze parti.
 Infatti, chiunque può creare un proprio plugin per estendere le funzionalità della piattaforma, ad esempio
-creando nuovi tipi di contenuti o aggiungere nuovi elementi o controlli alle pagine.
+creando nuovi tipi di contenuti o aggiungere nuovi elementi, allo stesso modo dei più famosi CMS in circolazione.
 Il CMS dispone poi di un semplice sistema di monitoraggio delle visite, che riporta sia le visite dei
 visitatori che degli utenti registrati, nonchè il totale degli accessi unici all'interno del sito, nonchè
 di un motore di rendering, che permette la creazione anche di più skin (temi), in modo che l'utente possa
