--- a/ocarina2/TODO
+++ b/ocarina2/TODO
@@ -1,3 +1,4 @@
+--Far funzionare il traduttore e implementarlo nei bbcode come plugin;
 --Bugfix del /REPORT;
 --Skin `mobile`;
 --Scaricare il plugin di jQuery `lazyloading` e provarlo.
