Everything is ready for the release of the beta version.

--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 The Ocarina's world :D
+
+Per piacere, se desideri installare i programmi qui presenti, fallo da <http://www.giovannicapuano.net/ocarina/>.
+In tal modo mi aiuterai a capire il numero di persone interessate ai vari pacchetti.
+
 ~ Giovanni Capuano <http://www.giovannicapuano.net>
