--- a/README
+++ b/README
@@ -2,5 +2,8 @@ The Ocarina's world :D
 
 Per piacere, se desideri installare i programmi qui presenti, fallo da <http://www.giovannicapuano.net/ocarina/>.
 In tal modo mi aiuterai a capire il numero di persone interessate ai vari pacchetti.
+-------------
+Please, if you wish to install these softwares, do it at <http://www.giovannicapuano.net/ocarina/>.
+In this way, you will help me to mean the number of people affected by the various packages.
 
 ~ Giovanni Capuano <http://www.giovannicapuano.net>
