--- a/Ocarina1ToOcarina2/README
+++ b/Ocarina1ToOcarina2/README
@@ -1,9 +1,12 @@
-There are two script that aim to upgrade your Ocarina1 at Ocarina2 without losing your news and pages.
-First, copy `ocarina1.php` in your Ocarina1 directory and run it.
-You should will find in this directory two files, `news.sql` and `pages.sql`.
-Copy both files and `ocarina2.php` in your Ocarina2 directory, and run this last file.
-After you receive your success message, delete from both Ocarina1 and Ocarina2 the files `news.sql`, `pages.sql`, `ocarina1.php` and `ocarina2.php`.
-You can now both delete Ocarina1 directory and database.
+Ecco due script che ti permettono di aggiornare il tuo Ocarina1 a Ocarina2 senza perdere le tue news, i tuoi commenti o le tue pagine.
+Per prima cosa, copia `ocarina1.php` nella tua cartella di Ocarina1, e avvialo.
+Dovresti ora trovarci due file, `news.sql`, `comments.sql` e `pages.sql`.
+Copia tali file insieme a `ocarina2.php` nella cartella di Ocarina2, e avvia quest'ultimo script.
+Dopo che hai ricevuto il messaggio di conferma dell'avvenuto caricamento, cancella sia da Ocarina1 che da Ocarina 2 i file `news.sql`, `comments.sql`, `pages.sql`, `ocarina1.php` e `ocarina2.php`.
+Puoi ora cancellare sia la cartella di Ocarina1 che il suo database.
 
-Good luck my boy/girl :D
+TRICK:
+	Crea una copia del file `pagina.php` e rinominalo come `sezioni.php` per non avere un errore 404 e mostrare comunque il contenuto.
+	
+Buona fortuna ragazz(o)/(a) mia :D
 (C) Giovanni Capuano <webmaster@giovannicapuano.net>
